workspace = { members = [ "net/wasabi","saba_core"] }

[package]
authors = ["sohta3"]
name = "saba"
version = "0.1.0"
edition = "2021"
default-run = "saba"

[features]
default = ["wasabi"]
std = ["dep:net_wasabi", "dep:noli"]

[[bin]]
default = "saba"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
saba_core = { path = "./saba_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
